# HSA-Conformance-Tests-PRM

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  cmake_linux.sh  cmake_linux_orca.sh  cmake_lnx.sh  cmake_lnx_amd.sh  cmake_win.bat  cmake_win_amd.bat  cmake_windows.bat  cmake_windows_orca.bat
docs/: HsaPrmConformance.html  HsaPrmConformance.md  ReleaseNotes  genfrommd.bat  stylesheet.html
src/: CMakeLists.txt
src/hexl/: CMakeLists.txt
src/hexl/hexl_HSAILTestGen/: CMakeLists.txt  HexlTestGen.cpp  HexlTestGen.hpp
src/hexl/hexl_base/: Arena.cpp  Arena.hpp  BasicHexlTests.cpp  BasicHexlTests.hpp  CMakeLists.txt  DllApi.hpp  Grid.cpp  Grid.hpp  HexlContext.cpp  HexlContext.hpp  HexlObjects.cpp  HexlObjects.hpp  HexlResource.cpp  HexlResource.hpp  HexlTest.cpp  HexlTest.hpp  HexlTestFactory.cpp  HexlTestFactory.hpp  HexlTestList.cpp  HexlTestList.hpp  HexlTestRunner.cpp  HexlTestRunner.hpp  Image.cpp  Image.hpp  MObject.cpp  MObject.hpp  Options.cpp  Options.hpp  RuntimeCommon.hpp  RuntimeContext.cpp  RuntimeContext.hpp  Scenario.cpp  Scenario.hpp  Stats.hpp  Utils.cpp  Utils.hpp
src/hexl/hexl_emitter/: BrigEmitter.cpp  BrigEmitter.hpp  CMakeLists.txt  CoreConfig.cpp  CoreConfig.hpp  Emitter.cpp  Emitter.hpp  EmitterCommon.hpp  Sequence.hpp
src/hexl/hexl_exe/: CMakeLists.txt  HexlRunner.cpp
src/hexl/hexl_hsaruntime/: CMakeLists.txt  HsailRuntime.cpp  HsailRuntime.hpp
src/hexl/hexl_lib/: CMakeLists.txt  HexlLib.cpp  HexlLib.hpp
src/hsail_conformance/: CMakeLists.txt  amdhsa.exclude  amdhsa.exclude.1.0f.2.rc4  amdhsa.exclude.lite  amdhsa.exclude.rc2  amdhsa.exclude.windows
src/hsail_conformance/common/: CMakeLists.txt  HCTests.cpp  HCTests.hpp  UtilTests.cpp  UtilTests.hpp
src/hsail_conformance/core/: AddressTests.cpp  AddressTests.hpp  AtomicTestHelper.cpp  AtomicTestHelper.hpp  AtomicTests.cpp  AtomicTests.hpp  BarrierTests.cpp  BarrierTests.hpp  BranchTests.cpp  BranchTests.hpp  CMakeLists.txt  CrossLaneTests.cpp  CrossLaneTests.hpp  DirectiveTests.cpp  DirectiveTests.hpp  DispatchPacketTests.cpp  DispatchPacketTests.hpp  ExceptionsTests.cpp  ExceptionsTests.hpp  ExecModelTests.cpp  ExecModelTests.hpp  FunctionsTests.cpp  FunctionsTests.hpp  InitializerTests.cpp  InitializerTests.hpp  LibrariesTests.cpp  LibrariesTests.hpp  LimitsTests.cpp  LimitsTests.hpp  MModelTests.cpp  MModelTests.hpp  MemoryFenceTests.cpp  MemoryFenceTests.hpp  MiscOperationsTests.cpp  MiscOperationsTests.hpp  PrmCoreTests.cpp  PrmCoreTests.hpp  SignalTests.cpp  SignalTests.hpp  SysArchMandatoryTests.cpp  (+4 more)
src/hsail_conformance/exe/: CMakeLists.txt  HsailConformanceRunner.cpp
src/hsail_conformance/image/: CMakeLists.txt  ImageCoreTests.cpp  ImageCoreTests.hpp  ImageInitializerTests.cpp  ImageInitializerTests.hpp  ImageLdTests.cpp  ImageLdTests.hpp  ImageLimitsTests.cpp  ImageLimitsTests.hpp  ImageQueryTests.cpp  ImageQueryTests.hpp  ImageRdTests.cpp  ImageRdTests.hpp  ImageStTests.cpp  ImageStTests.hpp  ImageTests.cpp  ImageTests.hpp  ImagesTests.cpp  ImagesTests.hpp
src/libTestGen/: CMakeLists.txt  HSAILTestGenBackend.cpp  HSAILTestGenBackend.h  HSAILTestGenBackendEml.h  HSAILTestGenBackendLua.h  HSAILTestGenBrigContext.cpp  HSAILTestGenBrigContext.h  HSAILTestGenContext.cpp  HSAILTestGenContext.h  HSAILTestGenDataProvider.cpp  HSAILTestGenDataProvider.h  HSAILTestGenDump.cpp  HSAILTestGenDump.h  HSAILTestGenEmulator.cpp  HSAILTestGenEmulator.h  HSAILTestGenEmulatorTypes.cpp  HSAILTestGenEmulatorTypes.h  HSAILTestGenFpEmulator.cpp  HSAILTestGenFpEmulator.h  HSAILTestGenInstDesc.h  HSAILTestGenInstSet.h  HSAILTestGenInstSetManager.cpp  HSAILTestGenInstSetManager.h  HSAILTestGenManager.h  HSAILTestGenProp.cpp  HSAILTestGenProp.h  HSAILTestGenPropDesc.cpp  HSAILTestGenPropDesc.h  HSAILTestGenProvider.cpp  HSAILTestGenProvider.h  HSAILTestGenSample.cpp  HSAILTestGenSample.h  HSAILTestGenTestData.h  HSAILTestGenTestDesc.cpp  HSAILTestGenTestDesc.h  HSAILTestGenUtilities.cpp  HSAILTestGenUtilities.h  HSAILTestGenVal.cpp  HSAILTestGenVal.h  HSAILTestGen_gen.hpp
