add_executable(
hc
HsailConformanceRunner.cpp
)

target_link_libraries(hc hexl_base hexl_emitter hexl_hsaruntime hexl_lib)
target_link_libraries(hc hc_common hc_core hc_image)

install(TARGETS hc
  RUNTIME DESTINATION bin COMPONENT hsail_conformance
)

macro(hc_test path)
  add_test(NAME ${path}
           COMMAND $<TARGET_FILE:hc> -rt none -tests ${path} -runner simple
           WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
endmacro()

hc_test(prm/core/arithmetic/intfp)
hc_test(prm/core/arithmetic/intopt)
hc_test(prm/core/arithmetic/24int)
hc_test(prm/core/arithmetic/intshift)
hc_test(prm/core/arithmetic/indbit)
hc_test(prm/core/arithmetic/bitstr)
hc_test(prm/core/arithmetic/copymove)
hc_test(prm/core/arithmetic/packed)
hc_test(prm/core/arithmetic/bitcmov)
hc_test(prm/core/arithmetic/fpbit)
hc_test(prm/core/arithmetic/nativefp)
hc_test(prm/core/arithmetic/multimedia)
hc_test(prm/core/arithmetic/compare)
hc_test(prm/core/arithmetic/conversion)
hc_test(prm/core/arithmetic/address)
hc_test(prm/core/memory/ordinary)
hc_test(prm/core/memory/atomic)
hc_test(prm/core/memory/signal)
hc_test(prm/core/memory/memfence)
hc_test(prm/core/branch/br)
hc_test(prm/core/branch/cbr)
hc_test(prm/core/branch/sbr)
hc_test(prm/core/parallel/crosslane)
hc_test(prm/core/parallel/barrier)
hc_test(prm/core/parallel/fbarrier)
hc_test(prm/core/functions/arguments)
hc_test(prm/core/functions/recursion)
hc_test(prm/core/functions/scall)
hc_test(prm/core/special/dispatchpacket)
hc_test(prm/core/special/exception)
hc_test(prm/core/special/usermodequeue)
hc_test(prm/core/special/misc)
hc_test(prm/core/variables/initializer)
hc_test(prm/core/directive/loc)
hc_test(prm/core/directive/pragma)
hc_test(prm/core/directive/control)
hc_test(prm/core/directive/extension)
hc_test(prm/core/limits/equiv)
hc_test(prm/core/limits/wgsize)
hc_test(prm/core/limits/wavesize)
hc_test(prm/core/limits/wgnumber)
hc_test(prm/core/limits/dims)
hc_test(prm/core/limits/group_memory_size)
hc_test(prm/core/limits/private_memory_size)
hc_test(prm/core/limits/kernarg_memory_size)
hc_test(prm/core/limits/arg_memory_size)
hc_test(prm/core/limits/registers)
hc_test(prm/core/libraries/linkage)
hc_test(prm/image/image_rd/basic)
hc_test(prm/image/image_query/basic)
hc_test(prm/image/image_query_sampler/basic)
hc_test(prm/image/image_ld/basic)
hc_test(prm/image/image_st/basic)
hc_test(prm/image/initializer/sampler)
hc_test(prm/image/limits/size)
hc_test(prm/image/limits/ro_number)
hc_test(prm/image/limits/rw_number)
hc_test(prm/image/limits/wo_number)
hc_test(prm/image/limits/combine_number)
hc_test(prm/image/limits/sampler_number)
hc_test(sysarch/mandatory/consistency/atomicity)
hc_test(sysarch/mandatory/consistency/mmodel)
hc_test(sysarch/mandatory/consistency/execmodel)
